@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US023

class PlantFloorManager {
}

class WorkstationType {
    id
    name
}

class Workstation {
    id
    name
}

PlantFloorManager "1" -- "1..*" Workstation : register >
WorkstationType "1" -- "*" Workstation : categorizes >

@enduml
